--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"name": "svelte-tools",
+	"name": "@davis7dotsh/runekit",
 	"version": "0.0.1",
+	"description": "Developer tooling plugin suite for SvelteKit.",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && bun run prepack",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"prepack": "svelte-kit sync && svelte-package && publint",
+		"prepare": "bunx --bun svelte-kit sync || echo ''",
+		"prepack": "bunx --bun svelte-kit sync && bunx --bun svelte-package && bunx --bun publint",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
@@ -30,10 +31,26 @@
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js",
 			"default": "./dist/index.js"
-		}
+		},
+		"./monitor": {
+			"types": "./dist/monitor.d.ts",
+			"svelte": "./dist/monitor.js",
+			"default": "./dist/monitor.js"
+		},
+		"./package.json": "./package.json"
 	},
 	"peerDependencies": {
-		"svelte": "^5.0.0"
+		"@sveltejs/kit": "^2.0.0",
+		"svelte": "^5.0.0",
+		"vite": "^6.0.0 || ^7.0.0"
+	},
+	"peerDependenciesMeta": {
+		"@sveltejs/kit": {
+			"optional": true
+		}
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^2.0.2",
